# code-rag-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_STATUS.md  BENCHMARK-ROADMAP.md  CLAUDE.md  GROUND-TRUTH.md  MODEL_TRAINING_SPEC.md  Makefile  NEXT_SESSION_PROMPT.md  README.md  RERANKER_IMPROVEMENT_PLAN.md  ROADMAP.md  SESSION_FINDINGS.md  TESTING.md  cli.py  daemon.py  mcp_server.py  pyproject.toml  setup_wizard.py
.claude/: overnight-prompt.md  overnight-state.md  settings.local.json
archive/: DEEPRESEARCH_PROMPT.md  NEXT_SESSION_STEP2.md  NEXT_SESSION_STEP6.md  NEXT_SESSION_STEP9.md  README.md  RERANKER_IMPROVEMENT_PLAN.md
bench_runs/: baseline-L6_code_bench.json  baseline_prod_code_NO_RERANK.json  baseline_prod_docs_n200.json  baseline_prod_docs_n200_NO_RERANK.json  baseline_prod_docs_v3.json  baseline_prod_docs_v3_NO_RERANK.json  exp2_camel.json  exp2_enabled_n663.json  exp2_no_docs.json  exp2_rerun.json  exp2_rerun2.json  exp2_rerun3.json  jira_clean_baseline_rescored.json  jira_clean_n663_baseline_session2.json  pod_status.jsonl  rerank-l12_code_bench.json  rerank-mxbai_code_bench.json  run1_docs-mxbai_v3.json  run1_rerank-bge-bs2_n200.json  run1_rerank-bge-bs8_n200.json  run1_rerank-bge-h100-bs2.json  run1_rerank-bge-h100-bs8.json  run1_rerank-l12.json  run1_rerank-l12_n200.json  run1_rerank-l12_v3.json  run1_rerank-mxbai.json  run1_rerank-mxbai_n200.json  run1_rerank-mxbai_v3.json  run2_B_mxbai-docs-only.json  run2_B_mxbai-docs-only_code_bench.json  run2_C_mxbai-code-only.json  run2_C_mxbai-code-only_code_bench.json  sweep_l12_docs_pool100.json  sweep_l12_docs_pool200.json  sweep_l12_docs_pool300.json  sweep_l12_docs_pool50.json  sweep_l12_pool100.json  sweep_l12_pool200.json  sweep_l12_pool300.json  sweep_l12_pool50.json  (+5 more)
scripts/: AGENTS.md  _common.py  ab_lost_tickets.py  analyze_calls.py  analyze_change_impact.py  analyze_churn.py  analyze_developer_patterns.py  analyze_feedback.py  analyze_file_patterns.py  analyze_gaps.py  analyze_session_quality.py  auto_collect.py  autoresearch.py  autoresearch_eval.py  autoresearch_loop.py  bench_utils.py  bench_v2_gate.py  benchmark_bench_v2.py  benchmark_file_recall.py  benchmark_flows.py  benchmark_investigation.py  benchmark_queries.py  benchmark_realworld.py  benchmark_recall.py  benchmark_rerank_ab.py  build_audit_context.py  build_docs_vectors.py  build_env_index.py  build_graph.py  build_index.py  build_internal_traces.py  build_method_matrix.py  build_repo_summary_index.py  build_shadow_types.py  build_test_map.py  build_v12_holdouts.py  build_vectors.py  build_vectors_coderank.sh  check_pr_patterns.py  churn_llm_judge.py  (+63 more)
src/: AGENTS.md  __init__.py  api_costs.py  cache.py  config.py  container.py  (+8 more)
(+456 files in other folders)
